@@ -4,6 +4,7 @@ project(mame_regtest)
 option(USE_CONAN "Use conan for external dependencies" OFF)
 option(USE_SANITIZERS "Use sanitizers" OFF)
 option(USE_VS_ANALYZE "Use Visual Studio Code Analysis" OFF)
+option(USE_GCC_ANALYZER "Use GCC Static Analysis" OFF)
 
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -56,6 +57,10 @@ elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     # these warnings produce false positives before GCC 10
     if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "10.0.1")
         add_compile_options(-Wconversion -Wsign-conversion)
+        # TODO: always enable when all warnings are fixed
+        if (USE_GCC_ANALYZER)
+            add_compile_options(-fanalyzer)
+        endif()
     endif()
 endif()
 
